# goREgo

./: .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  bazel_deps.bzl  config.yaml  go.mod  go.sum
.github/workflows/: ci.yml
charts/gorego/: .helmignore  Chart.yaml  values.yaml
charts/gorego/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  headless-service.yaml  service.yaml  statefulset.yaml
cmd/gobazelre/: BUILD.bazel  main.go
cmd/gorego/: BUILD.bazel  compression_test.go  integration_test.go  main.go
container/: BUILD.bazel
container/base/: Dockerfile  build.sh
docs/plan/: concurrency-audit.md  phase1_caching_proxy.md  phase2_monitoring_tooling.md  phase3_execution.md  phase4_clustering.md  phase4_sandboxing.md  phase4a_remote_compression.md  phase5_deployment.md  phase6_clustering.md
docs/research/: Homogeneous Go Bazel Remote Execution Architecture (Final Design).md
docs/retro/: concurrency-audit-fixes.md  phase1_completion.md  phase2_monitoring_completion.md  phase3_execution_completion.md  phase4_sandboxing_completion.md  phase4a_compression_completion.md  phase5_deployment.md  phase6_clustering_completion.md
internal/config/: BUILD.bazel
lib/config/: BUILD.bazel  config.go
lib/janitor/: BUILD.bazel  janitor.go  janitor_test.go
lib/proxy/: BUILD.bazel  proxy.go
lib/server/: BUILD.bazel  server.go
lib/storage/: BUILD.bazel  local.go  local_test.go
patches/: BUILD.bazel  remote-apis-clean.patch  remote-apis-fix-build.patch
pkg/cluster/: BUILD.bazel  cluster.go  cluster.proto  cluster_test.go
pkg/config/: BUILD.bazel  config.go
pkg/execution/: BUILD.bazel  fake_sandbox.sh  hardlink_test.go  persistent.go  persistent_test.go  sandbox_integration_test.go  worker.go  worker_test.go
pkg/execution/worker_protocol/: BUILD.bazel  worker_protocol.pb.go  worker_protocol.proto
pkg/janitor/: BUILD.bazel  janitor.go  janitor_test.go
pkg/proxy/: BUILD.bazel  proxy.go  proxy_test.go
pkg/sandbox/: BUILD.bazel  sandbox.go  sandbox_test.go
pkg/scheduler/: BUILD.bazel  scheduler.go  scheduler_test.go
pkg/server/: BUILD.bazel  actioncache.go  bytestream.go  bytestream_test.go  execution.go  operations.go  resource_name_test.go  server.go
pkg/storage/: BUILD.bazel  local.go  local_putfile_test.go  local_test.go  null.go  remote.go  remote_leak_test.go  remote_test.go  storage.go
pkg/telemetry/: BUILD.bazel  telemetry.go
src/main/tools/: BUILD.bazel
