module(
    name = "go_re_go",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0", repo_name = "com_github_bazelbuild_remote_apis")
git_override(
    module_name = "bazel_remote_apis",
    remote = "https://github.com/bazelbuild/remote-apis.git",
    tag = "v2.11.0-rc2",
)

bazel_dep(name = "googleapis", version = "0.0.0-20260109-6145b5ff")
bazel_dep(name = "rules_proto", version = "7.0.2")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_viper",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)

go_repository = use_repo_rule("@gazelle//:def.bzl", "go_repository")

go_repository(
    name = "bazel_remote_apis_sdks",
    importpath = "github.com/bazelbuild/remote-apis-sdks",
    commit = "a01d8dc79d0d", # Match v0.0.0-20251202...
    build_directives = [
        "gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/semver @bazel_remote_apis//build/bazel/semver:semver_go_proto",
    ],
)

# We are using the bazel_remote_apis module directly, so we don't need manual go_repository

# or gazelle overrides for it. Gazelle needs to be told how to map the Go imports to these targets.
