module(
    name = "go_re_go",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "bazel_remote_apis", version = "0.0.0", repo_name = "com_github_bazelbuild_remote_apis")
git_override(
    module_name = "bazel_remote_apis",
    commit = "6777112ef7defa6705b1ebd2831d6c7efeb12ba2",
    remote = "https://github.com/bazelbuild/remote-apis.git",
)

bazel_dep(name = "googleapis", version = "0.0.0-20260109-6145b5ff")
bazel_dep(name = "rules_proto", version = "7.0.2")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# remote-apis has pre-built BUILD files with broken deps - regenerate them cleanly
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:exclude build",
    ],
    path = "github.com/bazelbuild/remote-apis",
)

# SDK needs BUILD files regenerated with correct resolve directives
# Use canonical repo name (@@bazel_remote_apis+) for cross-extension visibility
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = [
        "gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @@bazel_remote_apis+//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/semver @@bazel_remote_apis+//build/bazel/semver:semver_go_proto",
    ],
    path = "github.com/bazelbuild/remote-apis-sdks",
)

# Include SDK and all its transitive deps
# Note: com_github_bazelbuild_remote_apis is provided by bazel_dep, not go_deps
use_repo(
    go_deps,
    "com_github_bazelbuild_remote_apis_sdks",
    "com_github_google_uuid",
    "com_github_prometheus_client_golang",
    "com_github_spf13_viper",
    "com_google_cloud_go_longrunning",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)
