load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "bins",
    srcs = [
        "//cmd/gorego",
        "//src/main/tools:linux-sandbox",
    ],
    package_dir = "/gorego",
)

pkg_tar(
    name = "config",
    srcs = ["//:config.yaml"],
    package_dir = "/",
)

oci_image(
    name = "container",
    base = "@ubuntu_image_linux_amd64",
    entrypoint = ["/gorego/gorego"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/colinrgodsey/goREgo",
        "org.opencontainers.image.description": "GoREGo - Bazel Remote Execution",
    },
    tars = [
        ":bins",
        ":config",
    ],
)

# TODO: bazel stamp
# bazel run //container:push -- --tag latest
oci_push(
    name = "push",
    image = "container",
    repository = "ghcr.io/colinrgodsey/gorego",
)
