load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gorego_lib",
    srcs = ["main.go"],
    importpath = "github.com/colinrgodsey/goREgo/cmd/gorego",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/config",
        "//lib/janitor",
        "//lib/proxy",
        "//lib/server",
        "//lib/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
    ],
)

go_test(
    name = "gorego_test",
    srcs = ["integration_test.go"],
    embed = [":gorego_lib"],
    deps = [
        "//lib/proxy",
        "//lib/server",
        "//lib/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/client",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "gorego",
    data = ["//:config.yaml"],
    embed = [":gorego_lib"],
    visibility = ["//visibility:public"],
)
