load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gorego_lib",
    srcs = ["main.go"],
    importpath = "github.com/colinrgodsey/goREgo/cmd/gorego",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cluster",
        "//pkg/config",
        "//pkg/execution",
        "//pkg/janitor",
        "//pkg/proxy",
        "//pkg/scheduler",
        "//pkg/server",
        "//pkg/storage",
        "//pkg/telemetry",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "gorego_test",
    srcs = [
        "compression_test.go",
        "integration_test.go",
    ],
    embed = [":gorego_lib"],
    deps = [
        "//pkg/proxy",
        "//pkg/server",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/client",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_binary(
    name = "gorego",
    data = ["//:config.yaml"],
    embed = [":gorego_lib"],
    visibility = ["//visibility:public"],
)
