load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "local.go",
        "storage.go",
    ],
    importpath = "github.com/colinrgodsey/goREgo/lib/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "storage_test",
    srcs = ["local_test.go"],
    embed = [":storage"],
    deps = ["@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto"],
)
