load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "execution",
    srcs = ["worker.go"],
    importpath = "github.com/colinrgodsey/goREgo/pkg/execution",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/sandbox",
        "//pkg/scheduler",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "execution_test",
    srcs = [
        "hardlink_test.go",
        "worker_test.go",
    ],
    embed = [":execution"],
    deps = [
        "//pkg/config",
        "//pkg/scheduler",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@org_golang_google_protobuf//proto",
    ],
)
