load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "actioncache.go",
        "bytestream.go",
        "execution.go",
        "operations.go",
        "server.go",
    ],
    importpath = "github.com/colinrgodsey/goREgo/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/scheduler",
        "//pkg/storage",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:semver_go_proto",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
