load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "local.go",
        "null.go",
        "remote.go",
        "storage.go",
    ],
    importpath = "github.com/colinrgodsey/goREgo/pkg/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/config",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/client",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@com_github_google_uuid//:uuid",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "local_putfile_test.go",
        "local_test.go",
        "remote_leak_test.go",
        "remote_test.go",
    ],
    embed = [":storage"],
    deps = [
        "//pkg/config",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_klauspost_compress//zstd",
        "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
        "@org_golang_google_grpc//:grpc",
    ],
)
