load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "worker_protocol_proto",
    srcs = ["worker_protocol.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "worker_protocol_go_proto",
    importpath = "github.com/colinrgodsey/goREgo/pkg/execution/worker_protocol",
    proto = ":worker_protocol_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "worker_protocol",
    embed = [":worker_protocol_go_proto"],
    importpath = "github.com/colinrgodsey/goREgo/pkg/execution/worker_protocol",
    visibility = ["//visibility:public"],
)
